Style: Refactor code for improved readability and performance
- Updated exception handling in IpUtils to ignore specific throwable types.
- Simplified error message handling in PythonExecute.
- Enhanced string formatting in ExcelToMarkdownProcessor, ImageOcrProcessor, PdfOcrProcessor, PdfToMarkdownProcessor, TextToMarkdownProcessor, and WordToMarkdownProcessor using text blocks.
- Replaced byte array writing with string writing in file operations across multiple processors.
- Optimized switch statements in DatabaseConfigParser and DatabaseSqlGenerator for cleaner syntax.
- Improved directory operations in DirectoryOperator for better readability.
- Streamlined ExcelProcessingService methods for clarity.
- Refactored action handling in ExcelProcessorTool and ParallelExecutionTool using switch expressions.
- Enhanced type checks and variable declarations in various classes for better type safety.
- Updated logging and analysis output formatting in UploadedFileLoaderTool.
- Improved memory sorting in MemoryServiceImpl using comparator.
- Updated binary font file in static resources.