@@ -124,8 +124,14 @@ public class PdfToMarkdownProcessor {
 			}
 
 			// Step 5: Return success result
-			String result = String.format("Successfully converted PDF file to Markdown\n\n" + "**Output File**: %s\n\n"
-					+ "**Processing Method**: Traditional Text Extraction\n\n", markdownFilename);
+			String result = String.format("""
+					Successfully converted PDF file to Markdown
+
+					**Output File**: %s
+
+					**Processing Method**: Traditional Text Extraction
+
+					""", markdownFilename);
 
 			// Add content if less than 1000 characters
 			if (markdownContent.length() < 1000) {
@@ -341,8 +347,7 @@ public class PdfToMarkdownProcessor {
 			Path currentPlanDir = directoryManager.getRootPlanDirectory(currentPlanId);
 			Path outputFile = currentPlanDir.resolve(filename);
 
-			Files.write(outputFile, content.getBytes("UTF-8"), StandardOpenOption.CREATE,
-					StandardOpenOption.TRUNCATE_EXISTING);
+			Files.writeString(outputFile, content, StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
 
 			log.info("Markdown file saved: {}", outputFile);
 			return outputFile;
