@@ -81,8 +81,12 @@ public class TextToMarkdownProcessor {
 			}
 
 			// Step 5: Return success result
-			String result = String.format(
-					"Successfully converted text file to Markdown\n\n" + "**Output File**: %s\n\n", markdownFilename);
+			String result = String.format("""
+					Successfully converted text file to Markdown
+
+					**Output File**: %s
+
+					""", markdownFilename);
 
 			// Add content if less than 1000 characters
 			if (markdownContent.length() < 1000) {
@@ -381,8 +385,7 @@ public class TextToMarkdownProcessor {
 			Path currentPlanDir = directoryManager.getRootPlanDirectory(currentPlanId);
 			Path outputFile = currentPlanDir.resolve(filename);
 
-			Files.write(outputFile, content.getBytes("UTF-8"), StandardOpenOption.CREATE,
-					StandardOpenOption.TRUNCATE_EXISTING);
+			Files.writeString(outputFile, content, StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
 
 			log.info("Markdown file saved: {}", outputFile);
 			return outputFile;
